syntax = "proto3";

package config;

option go_package = "/root/workspace/HUN/KETI-CSD-Manager/csd-metric-interface";

service CSDMetric {
    rpc receiveCSDMetric (CSDMetricRequest) returns (MetricResponse);
}

message CSDMetricRequest { // csd metric 전송
    int32 id = 1;
    
	double totalCpuCapacity = 2;
	double cpuUsage = 3;
	double cpuUsagePercent = 4;

	double totalMemCapacity = 5;
	double memUsage = 6;
	double memUsagePercent = 7;

	double totalDiskCapacity = 8;
	double diskUsage = 9;
	double diskUsagePercent = 10;

	double networkBandwidth = 11;
	double networkRxData = 12;
	double networkTxData = 13;
}

message MetricResponse { // csd metric 응답
    string json_config = 1;
}